--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body{
+  width: 350px;
+  margin: 5vh auto;
+  border: 2px solid black;
+}
+
+body h2{
+  margin: 10px;
+}
+
+.disable{
+  text-decoration: line-through;
+}
